--- a/style.css
+++ b/style.css
@@ -249,4 +249,17 @@ body {
     background-color: aliceblue;
 }
 
+#aboutus-title {
+    font-family: 'Pacifico', cursive;
+    font-size: 80px;
+    text-align: center;
+    padding-top: 10%;
+    
+}
+
+.about-header {
+    height: 400px;
+    background-color: aqua;
+}
+
 
