changed font size and family

--- a/adopt.css
+++ b/adopt.css
@@ -43,9 +43,9 @@
 
 #pet-info {
     padding-top: 30%;
-    font-size: 20px;
+    font-size: 18px;
     text-align: justify;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #dog-grid {
