--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*stylesheet for dog rescue*/
 
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
