--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ body {
     height: 610px;
     text-align: center;
     background-image: url("images/banner-image2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     margin-top: -50px;
 }
 
