--- a/adopt.css
+++ b/adopt.css
@@ -44,7 +44,7 @@
 }
 
 #pet-info {
-    padding-top: 30%;
+    padding-top: 25%;
     font-size: 18px;
     text-align: justify;
     font-family: 'Montserrat', sans-serif;
@@ -58,3 +58,17 @@
 .grid-container img {
     width: 60%;
 }
+
+ul {
+    list-style: none;
+}
+
+ul li::before {
+    content: "\2022";
+    color: red;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
+}
+
