--- a/css/style.css
+++ b/css/style.css
@@ -93,45 +93,6 @@ body {
     margin-top: -10px;
 }
 
-.button {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #f1e7fe;
-  border: none;
-  color: #ec644b;
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 250px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-}
-
-.button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.button:hover span {
-  padding-right: 25px;
-}
-
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
 
 .about #img-about {
     
@@ -160,6 +121,7 @@ body {
 .slideshow {
     margin-top: -30px;
     padding-top: 0;
+    margin-bottom: 10%;
 }
 
 /* Next & previous buttons */
@@ -248,12 +210,6 @@ body {
     .prev, .next,.text {font-size: 11px}
 }
 
-/************ FOOTER **************/
-
-.footer {
-    height: 300px;
-    background-color: aliceblue;
-}
 
 /************ ABOUT US **************/
 /**********************************/
