new background cover

--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,6 @@ body {
 }
 
 
-#img-about {
-    width: 50%;
-    max-height: 50%;
-}
 
 /****** SLIDESHOW *******/
 /***********************/
@@ -227,6 +223,8 @@ body {
 .about-header {
     height: 450px;
     background-image: url(../images/aboutus-banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /************ BLOCKQUOTE ************/
